整合es